<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/notification"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_general"
            android:icon="@drawable/general"
            android:title="@string/nav_general" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/account"
            android:title="@string/nav_account" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/nav_help" />


    </group>



</menu>